--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.1",
     "stream-chat": "^6.5.0",
     "stream-chat-react": "^8.1.1",
+    "ts-node": "^10.7.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
@@ -37,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
